--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
   <a href="/" title="Home">
-    <img src="/apple-touch-icon.png" alt="Unredacted Word logo" height=64 width=64>
+    <img src="{{ site.data.uris['logo'].url }}" alt="Unredacted Word logo" height=64 width=64>
   </a>
 </header>
