added rough checkout to site

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,6 @@
+<script src="https://js.stripe.com/v3"></script>
+<script src="/static/checkout.js"></script>
+
 {% if site.is_dev %}
   <script src="//localhost:35729/livereload.js"></script>
 {% endif %}
