--- a/_includes/body.html
+++ b/_includes/body.html
@@ -1,4 +1,4 @@
-<body class="layout-{{ page.layout | default: "default" }} {{page.bodyClass}}">
+<body class="system-sans-serif layout-{{ page.layout | default: "default" }} {{page.bodyClass}}">
   {% if layout.header %}
     {% include {{ layout.header }} %}
   {% endif %}
