updated heading font style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,6 +52,8 @@ h6 {
   font-size: 1em;
   font-weight: 900;
   letter-spacing: -.025em;
+  line-height: 0.8em;
+  margin: 0.5em 0 0.2em 0;
   text-transform: uppercase;
 }
 h1, h2 {
