updated colors to use css vars

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,5 @@
 :root {
+  --background-color: white;
   --primary-text-color: #292929;
   --light-text-color: darkgray;
   --text-selection-color: rgba(254, 231, 0, 0.9);
@@ -24,13 +25,14 @@ select {
 }
 
 body {
-  color: #292929;
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
   padding: 0 1.5em;
   margin: 0;
 }
 
 a {
-  color: #292929;
+  color: var(--primary-text-color);
 }
 a:hover {
   color: #0000cc;
@@ -38,8 +40,8 @@ a:hover {
 
 hr {
   border: none;
-  border-top: 2pt solid black;
-  border-bottom: 1pt solid black;
+  border-top: 2pt solid var(--primary-text-color);
+  border-bottom: 1pt solid var(--primary-text-color);
   height: 4pt;
 }
 
