--- a/_sass/_util.scss
+++ b/_sass/_util.scss
@@ -26,7 +26,8 @@
   width: auto;
 }
 
-.layout-default {
+.layout-default,
+.layout-page {
   max-width: 60rem; /* 960 = 16 * 60 */
   margin: 0 auto;
 }
