--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <a href="mailto:enquiries@unredacted-word.pub" title="Email">Email</a>
     <a href="mailto:editor@unredacted-word.pub" title="Submissions">Editor</a>
     <a href="mailto:wholesale@unredacted-word.pub" title="Retail and wholesale orders">Distribution</a>
-    <a href="mailto:support@unredacted-word.pub" title="Orders">Support</a>
+    <a href="mailto:orders@unredacted-word.pub" title="Orders">Support</a>
     <a href="https://twitter.com/unredactedword"
       rel="nofollow external noopener" title="Unredacted Word on Twitter">
       <img src="{{ site.data.uris['twitter'].url }}" alt="Twitter logo"
