--- a/_sass/_util.scss
+++ b/_sass/_util.scss
@@ -200,6 +200,9 @@
 .blocktable tbody tr th:first-child {
   width: 25%;
 }
+.component-buy-now {
+  display: flex;
+}
 
 .buy-now {
   background-color: var(--primary-text-color);
@@ -207,8 +210,16 @@
   cursor: pointer;
   padding: 0.5rem 1rem;
   border: 0;
-  border-radius: 0.25rem;
+  border-radius: 0.25rem 0 0 0.25rem;
   font-size: 1rem
+}
+
+.buy-quantity {
+  width: 4rem;
+  border: 2px solid var(--primary-text-color);
+  padding: 0.375rem 0.25rem;
+  border-radius: 0 0.25rem 0.25rem 0;
+  font-size: 1rem;
 }
 
 .page-home .site-header,
