make scripts async

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
-<script src="https://js.stripe.com/v3"></script>
-<script src="/static/checkout.js"></script>
+<script async src="https://js.stripe.com/v3"></script>
+<script async src="/static/checkout.js"></script>
 
 {% if site.is_dev %}
   <script src="//localhost:35729/livereload.js"></script>
