new product table template and includes for buy button widgets

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -27,6 +27,8 @@
   </header>
 
   <div class="entry-content e-content">
+    {% include product-table.html sku=page.sku showFeatures="True" %}
+
     {{ content }}
   </div>
 
