added dark-mode theme

--- a/_sass/_util.scss
+++ b/_sass/_util.scss
@@ -229,8 +229,8 @@
 }
 
 .buy-now {
-  background-color: var(--primary-text-color);
-  color: white;
+  background-color: var(--cta-background);
+  color: var(--cta-foreground);
   cursor: pointer;
   padding: 0.5rem 1rem;
   border: 0;
@@ -240,7 +240,7 @@
 
 .buy-quantity {
   width: 4rem;
-  border: 2px solid var(--primary-text-color);
+  border: 2px solid var(--cta-background);
   padding: 0.375rem 0.25rem;
   border-radius: 0 0.25rem 0.25rem 0;
   font-size: 1rem;
