--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,17 @@
   --background-color: white;
   --primary-text-color: #292929;
   --light-text-color: darkgray;
+  --cta-background: #1a73e8;
+  --cta-foreground: #ffffff;
   --text-selection-color: rgba(254, 231, 0, 0.9);
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #292929;
+    --primary-text-color: #e5e5e5;
+    --light-text-color: darkgray;
+    --text-selection-color: rgba(254, 231, 0, 0.9);
+  }
 }
 
 * {
