--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,9 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
   <meta name="theme-color" content="#292929">
+  
   <meta name="pocket-site-verification" content="0bc1c43af2aad681f67332abee59c3">
+  <meta name="yandex-verification" content="889fd7b697cef103" />
   <meta name="author" content="{{ site.data.authors[page.author].name | default: "editors" }}">
 
   <meta name="description" content="{{ page.excerpt | strip_html }}" />
