--- a/_includes/product-table.html
+++ b/_includes/product-table.html
@@ -1,92 +1,76 @@
-{% assign product = site.data.catalog[include.sku] %}
+{% assign product = site.data.catalog[include.sku] %} {% if product.sku %}
+<table class="blocktable">
+  <tbody>
+    <tr>
+      <th scope="row">Name</th>
+      <td>
+        <a href="{{ product.url }}" alt="{{ product.name }}">
+          {{ product.name }}
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">SKU</th>
+      <td>{{ product.sku }}</td>
+    </tr>
+    <tr>
+      <th scope="row">Type</th>
+      <td>{{ product.product_type }}</td>
+    </tr>
+    {% if product.price %}
+    <tr>
+      <th scope="row">Price</th>
+      <td>{{ product.price }}</td>
+    </tr>
+    {% endif %}
+    <tr>
+      <th scope="row">URL</th>
+      <td>
+        <a href="{{ product.url }}">{{ product.url }}</a>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">Description</th>
+      <td>{{ product.description }}</td>
+    </tr>
+    <tr>
+      <th scope="row">Date Added</th>
+      <td>{{ product.date | date: "%B %-d, %Y" | default: "Forthcoming" }}</td>
+    </tr>
 
-{% if product.sku %}
-  <table class="blocktable">
-    <tbody>
-      <tr>
-        <th scope="row">Name</th>
-        <td>
-          <a href="{{ product.url }}" alt="{{ product.name }}">
-            {{ product.name }}
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">SKU</th>
-        <td>
-          {{ product.sku }}
-        </td>
-      </tr>
-      {% if product.price %}
-      <tr>
-        <th scope="row">Price</th>
-        <td>
-          {{ product.price }}
-        </td>
-      </tr>
-      {% endif %}
-      <tr>
-        <th scope="row">URL</th>
-        <td>
-          <a href="{{ product.url }}">{{ product.url }}</a>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">Description</th>
-        <td>
-          {{ product.description }}
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">Date Added</th>
-        <td>
-          {{ product.date | date: "%B %-d, %Y" | default: "Forthcoming" }}
-        </td>
-      </tr>
-
-      {% if product.image_assortment %}
-        <tr>
-          <th scope="row">Image</th>
-          <td>
-            <div class="sticker-assortment">
-              {% for image in product.image_assortment %}
-                <img src="{{ image.src }}" alt="{{ image.alt }}">
-              {% endfor %}
-            </div>
-          </td>
-        </tr>
-      {% elsif product.image %}
-        <tr>
-          <th scope="row">Image</th>
-          <td>
-            <img src="{{ product.image.src }}" alt="{{ product.image.alt }}">
-          </td>
-        </tr>
-      {% endif %}
-
-      {% if include.showFeatures == "True" %}
-        {% if product.features %}
-          {% for feature in product.features %}
-          <tr>
-            <th scope="row">
-              {{ feature.key }}
-            </th>
-            <td>
-              {{ feature.value }}
-            </td>
-          </tr>
+    {% if product.image_assortment %}
+    <tr>
+      <th scope="row">Image</th>
+      <td>
+        <div class="sticker-assortment">
+          {% for image in product.image_assortment %}
+          <img src="{{ image.src }}" alt="{{ image.alt }}" />
           {% endfor %}
-        {% endif %}
-      {% endif %}
-
-      {% if product.price %}
-      <tr>
-        <th scope="row">Buy</th>
-        <td>
-          {% include buy-now.html cta=product.cta sku=product.external_sku price=product.price quantity=product.quantity %}
-        </td>
-      </tr>
-      {% endif %}
-    </tbody>
-  </table>
+        </div>
+      </td>
+    </tr>
+    {% elsif product.image %}
+    <tr>
+      <th scope="row">Image</th>
+      <td>
+        <img src="{{ product.image.src }}" alt="{{ product.image.alt }}" />
+      </td>
+    </tr>
+    {% endif %} {% if include.showFeatures == "True" %} {% if product.features
+    %} {% for feature in product.features %}
+    <tr>
+      <th scope="row">{{ feature.key }}</th>
+      <td>{{ feature.value }}</td>
+    </tr>
+    {% endfor %} {% endif %} {% endif %} {% if product.price %}
+    <tr>
+      <th scope="row">Buy</th>
+      <td>
+        {% include buy-now.html cta=product.cta sku=product.external_sku
+        price=product.price quantity=product.quantity %}
+      </td>
+    </tr>
+    {% endif %}
+  </tbody>
+</table>
 {% endif %}
